2009-08-19  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (symbol_list_lookup): search for symbol name in a list
	(symtab_find, shadowing_lookup): use it

2009-08-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCC_PICFLAG) [cygwin]: empty:
	"warning: -fPIC ignored for target (all code is position independent)"

2009-08-17  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler_continuation): Update
	reference to Linux/arm register to match current API.

2009-08-16  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/Makefile.in, modules/bindings/glibc/Makefile:
	* modules/bindings/win32/Makefile, modules/clx/mit-clx/Makefile:
	* modules/clx/new-clx/Makefile.in, modules/dbus/Makefile.in:
	* modules/dirkey/Makefile.in, modules/fastcgi/Makefile.in:
	* modules/gdbm/Makefile.in, modules/gtk2/Makefile.in:
	* modules/i18n/Makefile.in, modules/libsvm/Makefile:
	* modules/matlab/Makefile, modules/netica/Makefile:
	* modules/oracle/Makefile.in, modules/pari/Makefile.in:
	* modules/pcre/Makefile.in, modules/postgresql/Makefile.in:
	* modules/queens/Makefile, modules/rawsock/Makefile.in:
	* modules/readline/Makefile.in, modules/regexp/Makefile.in:
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in:
	* modules/zlib/Makefile.in: avoid GNU extensions
	Reported by Aleksej Saushev <asau@inbox.ru>

2009-08-16  Vladimir Tzankov  <vtzankov@gmail.com>

	[MULTITHREAD]: make packages threads safe
	* package.d (rehash_symtab): do not reuse old cons cell.
	allocate new symtab
	(make_present, unexport, make_external): assign returned symtab -
	possibly newly allocated
	(unuse_1package): do not lock anything. caller should have obtained
	both package mutexes
	(unuse_package): obtain package locks before calling unuse_1package
	(USE-PACKAGE, UNUSE-PACKAGE): obtain global packages lock since more
	than one package mutex will be locked at a time
	(%IN-PACKAGE): lock while modifying existing packages