@@ -68,6 +68,7 @@
 <arg><option><link linkend="opt-repl">-repl</link></option></arg>
 <arg><option><link linkend="opt-wait">-w</link></option></arg>
 <arg><option><link linkend="opt-ilisp">-I</link></option></arg>
+<arg><option><link linkend="opt-norl">-disable-readline</link></option></arg>
 <group><arg>&opt-ansi;</arg><arg>&opt-traditional;</arg></group>
 <arg>&opt-modern;</arg>
 <arg><option><link linkend="opt-pack">-p &pack-r;</link></option></arg>
@@ -343,6 +344,13 @@ compiles the specified lisp files to a platform-independent
     </simpara></listitem>
 <!-- #endif -->
 </itemizedlist></para></listitem></varlistentry>
+
+<varlistentry id="opt-norl"><term><option>-disable-readline</option></term>
+ <listitem><simpara>Do not use &readline; even when it has been linked against.
+   This can be used if one wants to paste non-&ascii; characters, or
+   when &readline; misbehaves due to installation (different versions on
+   the build and install machines) or setup (bad <envar>TERM</envar>
+   &env-var; value) issues.</simpara></listitem></varlistentry>
 
 <varlistentry id="opt-ansi"><term><option>-ansi</option></term>
  <listitem><simpara>Comply with the &ansi-cl; specification even where
