@@ -1,3 +1,11 @@
+Important notes
+---------------
+
+* New command line option -disable-readline to work around bugs and
+  incompatibilities between readline CLISP was built against and the
+  library actually installed.
+
+
 2.48 (2009-07-28)
 =================
 
